[package]
authors = ["Dzefo"]
edition = "2018"
name = "scale"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
pretty-bytes = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "bench"
