[package]
authors = ["Dzefo"]
edition = "2018"
name = "scale"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
pretty-bytes = {git = "https://github.com/Dzefo/rust-pretty-bytes"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "bench"
