[package]
authors = ["Dzefo"]
edition = "2018"
name = "scale"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
pretty-bytes = {git = "https://github.com/Dzefo/rust-pretty-bytes"}

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "bench"
